Add partial resource resolution for shared template fragments.
Header and footer markup is copy-pasted across five pages and has
already
drifted. Extracting it needs a resource path that is readable by the
renderer but never reachable over HTTP.

resolve() only validates the name, never the base, so a nested base path
needs no change to the resolver -- the filename is still rejected if it
tries to climb out of the directory.

Also extracts ResourceCache's private etagOf into Etags, so pre-rendered
pages and cached static files tag their bodies with the same scheme
instead of growing a second one.