@@ -2,42 +2,87 @@ package com.serbekun.bunkasai.resources;
 
 import java.io.InputStream;
 import java.io.IOException;
+import java.net.JarURLConnection;
 import java.net.URL;
-import java.nio.charset.Charset;
+import java.net.URLConnection;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Enumeration;
+import java.util.LinkedHashSet;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * Responsible for loading resources from disk first, then classpath/JAR.
+ * Loads resources from the on-disk override directory first, then from the
+ * classpath/JAR.
+ * <p>
+ * The disk side has an explicit root ({@link #overrideRoot()}): every path is
+ * resolved against it and normalized, and anything that escapes the root is
+ * rejected. This holds even when a caller passes a raw, unvalidated path, so
+ * the loader never depends on {@link ResourcesBasePath#resolve} having been
+ * called upstream.
+ * </p>
  */
 public class ResourceLoader {
     private static final Logger log = LoggerFactory.getLogger(ResourceLoader.class);
 
+    /** Directory used for on-disk overrides when none is configured explicitly. */
+    public static final Path DEFAULT_OVERRIDE_ROOT = Path.of("data", "static");
+
+    private final Path overrideRoot;
+
+    /** Creates a loader using {@link #DEFAULT_OVERRIDE_ROOT} as the disk root. */
+    public ResourceLoader() {
+        this(DEFAULT_OVERRIDE_ROOT);
+    }
+
     /**
-     * Loads a resource as binary data from disk first, then classpath.
+     * Creates a loader with an explicit on-disk override root.
      *
-     * @param path the path to the resource
+     * @param overrideRoot directory holding files that shadow the packaged ones
+     */
+    public ResourceLoader(Path overrideRoot) {
+        this.overrideRoot = overrideRoot.toAbsolutePath().normalize();
+    }
+
+    /** The absolute, normalized directory disk lookups are confined to. */
+    public Path overrideRoot() {
+        return overrideRoot;
+    }
+
+    /**
+     * Loads a resource as binary data from disk first, then from the classpath.
+     *
+     * @param path the resource path, relative and using '/' as separator
      * @return byte array or null if not found or error
      */
     public byte[] loadBinary(String path) {
-        // check exist resource in disk
-        byte[] diskBytes = loadFromDisk(path);
-        if (diskBytes != null) {
-            return diskBytes;
+        if (!isSafeResourcePath(path)) {
+            log.warn("Rejected unsafe resource path: {}", path);
+            return null;
         }
+
+        // check exist resource in disk
+        Path file = resolveOnDisk(path);
+        if (file != null) {
+            try {
+                return Files.readAllBytes(file);
+            } catch (IOException e) {
+                log.error("Failed to read resource from disk: {}", file, e);
+            }
+        }
+
         // if resource don't exist in disk try to read from jar file
         try (InputStream is = getResourceAsStream(path)) {
             if (is == null) {
-                log.warn("Resource not found: {}", path);
+                log.debug("Resource not found: {}", path);
                 return null;
             }
             return is.readAllBytes();
@@ -48,29 +93,17 @@ public class ResourceLoader {
     }
 
     /**
-     * Loads a resource as text from the classpath.
-     *
-     * @param path the path to the resource
-     * @param charset the charset to use for decoding
-     * @return string or null if not found or error
-     */
-    public String loadText(String path, Charset charset) {
-        byte[] bytes = loadBinary(path);
-        if (bytes == null) {
-            return null;
-        }
-        return new String(bytes, charset);
-    }
-
-    /**
-     * Checks if a resource exists on the classpath.
+     * Checks if a resource exists on disk or on the classpath.
      *
      * @param path the path to the resource
      * @return true if the resource exists, false otherwise
      */
     public boolean exists(String path) {
+        if (!isSafeResourcePath(path)) {
+            return false;
+        }
         // check in disk
-        if (existsOnDisk(path)) {
+        if (resolveOnDisk(path) != null) {
             return true;
         }
         // check in jar file
@@ -83,33 +116,61 @@ public class ResourceLoader {
     }
 
     /**
-     * Checks if a resource exists on disk.
+     * Resolves a resource path to a readable file inside {@link #overrideRoot()}.
+     * <p>
+     * The path is normalized before the containment check, so {@code ..}
+     * segments cannot escape, and the resolved file is compared through
+     * {@link Path#toRealPath} so a symlink pointing outside the root is
+     * rejected as well.
+     * </p>
      *
-     * @param path path to the resource
-     * @return true if the file exists on disk, false otherwise
+     * @param path the resource path
+     * @return the real path of an existing regular file, or null
      */
-    private boolean existsOnDisk(String path) {
-        Path file = Path.of(path);
-        return Files.exists(file) && Files.isRegularFile(file);
+    private Path resolveOnDisk(String path) {
+        Path candidate = overrideRoot.resolve(path).normalize();
+        if (!candidate.startsWith(overrideRoot)) {
+            log.warn("Path escape attempt: {}", path);
+            return null;
+        }
+        if (!Files.isRegularFile(candidate)) {
+            return null;
+        }
+
+        try {
+            Path real = candidate.toRealPath();
+            if (!real.startsWith(overrideRoot.toRealPath())) {
+                log.warn("Symlink escapes resource root: {} -> {}", path, real);
+                return null;
+            }
+            return real;
+        } catch (IOException e) {
+            log.debug("Cannot resolve real path for {}", candidate, e);
+            return null;
+        }
     }
 
     /**
-     * Reads binary data of a resource from disk.
+     * Rejects paths that are absolute, empty or contain traversal segments.
+     * Applied to classpath lookups as well — the classloader does not confine
+     * lookups on its own.
      *
-     * @param path path to the resource
-     * @return binary data read from disk, or null if not found or error
+     * @param path the resource path to validate
+     * @return true if the path is safe to resolve
      */
-    private byte[] loadFromDisk(String path) {
-        Path file = Path.of(path);
-        if (!Files.exists(file) || !Files.isRegularFile(file)) {
-            return null;
+    private static boolean isSafeResourcePath(String path) {
+        if (path == null || path.isBlank()) {
+            return false;
         }
-        try {
-            return Files.readAllBytes(file);
-        } catch (IOException e) {
-            log.error("Failed to read resource from disk: {}", file, e);
-            return null;
+        if (path.startsWith("/") || path.contains("\\")) {
+            return false;
         }
+        for (String segment : path.split("/")) {
+            if (segment.equals("..")) {
+                return false;
+            }
+        }
+        return true;
     }
 
     /**
@@ -125,6 +186,10 @@ public class ResourceLoader {
 
     /**
      * Returns a list of all resources at the specified basePath (e.g. "html/", "images/", etc.)
+     * <p>
+     * Disk and classpath listings are merged, so a single overriding file on
+     * disk does not hide the rest of the packaged directory.
+     * </p>
      *
      * @param basePath path inside classpath ( must end with '/')
      * @return list of path to files (example: "html/index.html", "images/logo.png")
@@ -133,38 +198,34 @@ public class ResourceLoader {
         if (!basePath.endsWith("/")) {
             basePath += "/";
         }
-
-        // in first check on disk
-        List<String> fromDisk = listFromDisk(basePath);
-        if (!fromDisk.isEmpty()) {
-            return fromDisk;
+        if (!isSafeResourcePath(basePath)) {
+            log.warn("Rejected unsafe resource path: {}", basePath);
+            return List.of();
         }
 
-        // Searching in Jar / classpath
-        return listFromClasspath(basePath);
+        Set<String> merged = new LinkedHashSet<>(listFromDisk(basePath));
+        merged.addAll(listFromClasspath(basePath));
+
+        return merged.stream().sorted().toList();
     }
 
     /**
-     * Lists all files in the specified directory on disk.
+     * Lists all files of a directory inside the on-disk override root.
      *
-     * @param basePath path to the directory
+     * @param basePath path to the directory, relative to the override root
      * @return list of resource paths found on disk
      */
     private List<String> listFromDisk(String basePath) {
-        java.nio.file.Path dir = java.nio.file.Path.of(basePath);
-        if (!java.nio.file.Files.exists(dir) || !java.nio.file.Files.isDirectory(dir)) {
+        Path dir = overrideRoot.resolve(basePath).normalize();
+        if (!dir.startsWith(overrideRoot)) {
+            log.warn("Path escape attempt: {}", basePath);
+            return List.of();
+        }
+        if (!Files.isDirectory(dir)) {
             return List.of();
         }
 
-        try (var stream = java.nio.file.Files.walk(dir, 1)) { // Only 1 level
-            return stream
-                    .filter(java.nio.file.Files::isRegularFile)
-                    .map(p -> basePath + p.getFileName().toString())
-                    .collect(Collectors.toList());
-        } catch (IOException e) {
-            log.error("Failed to list files from disk: {}", basePath, e);
-            return List.of();
-        }
+        return listFromDirectory(dir, basePath);
     }
 
     /**
@@ -178,7 +239,7 @@ public class ResourceLoader {
 
         try {
             Enumeration<URL> urls = ResourceLoader.class.getClassLoader().getResources(basePath);
-            
+
             while (urls.hasMoreElements()) {
                 URL url = urls.nextElement();
                 String protocol = url.getProtocol().toLowerCase();
@@ -186,19 +247,24 @@ public class ResourceLoader {
                 if ("jar".equals(protocol)) {
                     result.addAll(listFromJar(url, basePath));
                 } else if ("file".equals(protocol)) {
-                    java.nio.file.Path path = java.nio.file.Paths.get(url.toURI());
-                    result.addAll(listFromDirectory(path, basePath));
+                    result.addAll(listFromDirectory(Paths.get(url.toURI()), basePath));
                 }
             }
         } catch (Exception e) {
             log.error("Failed to list resources from classpath: {}", basePath, e);
         }
 
-        return result.stream().distinct().sorted().collect(Collectors.toList());
+        return result.stream().distinct().sorted().toList();
     }
 
     /**
      * Lists resources inside a JAR file under the given base path.
+     * <p>
+     * The JAR is opened through {@link JarURLConnection} rather than by parsing
+     * the URL, so paths containing spaces or non-ASCII characters (which arrive
+     * percent-encoded from {@link URL#getPath()}) work. JAR caching is disabled
+     * so closing this handle cannot break a shared one.
+     * </p>
      *
      * @param jarUrl  URL to the JAR
      * @param basePath base directory path inside the JAR
@@ -206,21 +272,28 @@ public class ResourceLoader {
      */
     private List<String> listFromJar(URL jarUrl, String basePath) {
         List<String> result = new ArrayList<>();
-        String jarPath = jarUrl.getPath().substring(5, jarUrl.getPath().indexOf("!"));
 
-        try (JarFile jarFile = new JarFile(jarPath)) {
-            Enumeration<JarEntry> entries = jarFile.entries();
+        try {
+            URLConnection connection = jarUrl.openConnection();
+            if (!(connection instanceof JarURLConnection jarConnection)) {
+                return result;
+            }
+            jarConnection.setUseCaches(false);
 
-            while (entries.hasMoreElements()) {
-                JarEntry entry = entries.nextElement();
-                String name = entry.getName();
+            try (JarFile jarFile = jarConnection.getJarFile()) {
+                Enumeration<JarEntry> entries = jarFile.entries();
 
-                if (name.startsWith(basePath) && !entry.isDirectory()) {
-                    result.add(name);
+                while (entries.hasMoreElements()) {
+                    JarEntry entry = entries.nextElement();
+                    String name = entry.getName();
+
+                    if (name.startsWith(basePath) && !entry.isDirectory()) {
+                        result.add(name);
+                    }
                 }
             }
         } catch (IOException e) {
-            log.error("Failed to read JAR file", e);
+            log.error("Failed to read JAR file: {}", jarUrl, e);
         }
 
         return result;
@@ -233,12 +306,12 @@ public class ResourceLoader {
      * @param basePath base path prefix to use for results
      * @return list of resource paths
      */
-    private List<String> listFromDirectory(java.nio.file.Path dir, String basePath) {
-        try (var stream = java.nio.file.Files.walk(dir, 1)) {
+    private List<String> listFromDirectory(Path dir, String basePath) {
+        try (var stream = Files.walk(dir, 1)) {
             return stream
-                    .filter(java.nio.file.Files::isRegularFile)
+                    .filter(Files::isRegularFile)
                     .map(p -> basePath + p.getFileName().toString())
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
             log.error("Failed to list directory {}", dir, e);
             return List.of();
